# research-brief

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
eval/: test_cases.yaml
src/research_brief/: __init__.py  cli.py  config.py  models.py
src/research_brief/agent/: pipeline.py
src/research_brief/api/: main.py
src/research_brief/jobs/: store.py  worker.py
src/research_brief/search/: fetch.py  mock.py  provider.py  tavily.py
src/research_brief/synthesis/: brief.py
src/research_brief/tracing/: __init__.py  setup.py
src/research_brief/validation/: citations.py  grounding.py
tests/: conftest.py  test_api.py  test_jobs.py  test_pipeline.py  test_tracing.py  test_web_app.py
web/: app.py
