[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-brief"
version = "0.2.0"
description = "Multi-step research agent that produces cited briefs with tool traces."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Research Brief" }]
dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.14.0",
]
web = [
    "streamlit>=1.32.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
research-brief = "research_brief.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/research_brief"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
